# wirecloak

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
data/: org.nitrux.wirecloak.desktop
qml/: main.qml
scripts/: build-deb.sh  install-build-deps.sh
src/: main.cpp  vpnbackend.cpp  vpnbackend.h
